--- a/index.html
+++ b/index.html
@@ -60,127 +60,137 @@
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn btn btn-primary" type="button">
-          Order Service
-        </button>
+        <div class="container hero-container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-btn btn btn-primary" type="button">
+            Order Service
+          </button>
+        </div>
       </section>
       <section class="principles">
-        <h2 class="principles-title">Our Principles</h2>
-        <ul class="principles-list list">
-          <li class="principles-list-item">
-            <h3 class="principles-subtitle section-subtitle">Strategy</h3>
-            <p class="principles-list-text item-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="principles-list-item">
-            <h3 class="principles-subtitle section-subtitle">Punctuality</h3>
-            <p class="principles-list-text item-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="principles-list-item">
-            <h3 class="principles-subtitle section-subtitle">Diligence</h3>
-            <p class="principles-list-text item-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="principles-list-item">
-            <h3 class="principles-subtitle section-subtitle">Technologies</h3>
-            <p class="principles-list-text item-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container standard-container principles-container">
+          <h2 class="principles-title">Our Principles</h2>
+          <ul class="principles-list standard-list list">
+            <li class="principles-list-item">
+              <h3 class="principles-subtitle section-subtitle">Strategy</h3>
+              <p class="principles-list-text item-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="principles-list-item">
+              <h3 class="principles-subtitle section-subtitle">Punctuality</h3>
+              <p class="principles-list-text item-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="principles-list-item">
+              <h3 class="principles-subtitle section-subtitle">Diligence</h3>
+              <p class="principles-list-text item-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="principles-list-item">
+              <h3 class="principles-subtitle section-subtitle">Technologies</h3>
+              <p class="principles-list-text item-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="services">
-        <h2 class="services-title section-title">What are we doing</h2>
-        <ul class="services-list list">
-          <li class="services-list-item">
-            <img
-              class="services-list-image"
-              src="./images/section2/img_1.jpg"
-              alt="computer"
-              width="360"
-            />
-          </li>
-          <li class="services-list-item">
-            <img
-              class="services-list-image"
-              src="./images/section2/img_2.jpg"
-              alt="four cellphones"
-              width="360"
-            />
-          </li>
-          <li class="services-list-item">
-            <img
-              class="services-list-image"
-              src="./images/section2/img_3.jpg"
-              alt="hand with cellpone with laptop on backstage"
-              width="360"
-            />
-          </li>
-        </ul>
+        <div class="container standard-container services-container">
+          <h2 class="services-title section-title">What are we doing</h2>
+          <ul class="services-list standard-list list">
+            <li class="services-list-item">
+              <img
+                class="services-list-image"
+                src="./images/section2/img_1.jpg"
+                alt="computer"
+                width="360"
+              />
+            </li>
+            <li class="services-list-item">
+              <img
+                class="services-list-image"
+                src="./images/section2/img_2.jpg"
+                alt="four cellphones"
+                width="360"
+              />
+            </li>
+            <li class="services-list-item">
+              <img
+                class="services-list-image"
+                src="./images/section2/img_3.jpg"
+                alt="hand with cellpone with laptop on backstage"
+                width="360"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team">
-        <h2 class="team-title section-title">Our Team</h2>
-        <ul class="team-list list">
-          <li class="team-list-item">
-            <img
-              class="team-list-image"
-              src="./images/section3/mark.jpg"
-              alt="Mark photo"
-              width="264"
-            />
-            <h3 class="team-subtitle section-subtitle">Mark Guerrero</h3>
-            <p class="team-list-text item-text">Product Designer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              class="team-list-image"
-              src="./images/section3/tom.jpg"
-              alt="Tom photo"
-              width="264"
-            />
-            <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
-            <p class="team-list-text item-text">Frontend Developer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              class="team-list-image"
-              src="./images/section3/camila.jpg"
-              alt="Camila photo"
-              width="264"
-            />
-            <h3 class="team-subtitle section-subtitle">Camila Garcia</h3>
-            <p class="team-list-text item-text">Marketing</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              class="team-list-image"
-              src="./images/section3/daniel.jpg"
-              alt="Daniel photo"
-              width="264"
-            />
-            <h3 class="team-subtitle section-subtitle">Daniel Wilson</h3>
-            <p class="team-list-text item-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container team-container standard-container">
+          <h2 class="team-title section-title">Our Team</h2>
+          <ul class="team-list standard-list list">
+            <li class="team-list-item">
+              <img
+                class="team-list-image"
+                src="./images/section3/mark.jpg"
+                alt="Mark photo"
+                width="264"
+              />
+              <h3 class="team-subtitle section-subtitle">Mark Guerrero</h3>
+              <p class="team-list-text item-text">Product Designer</p>
+            </li>
+            <li class="team-list-item">
+              <img
+                class="team-list-image"
+                src="./images/section3/tom.jpg"
+                alt="Tom photo"
+                width="264"
+              />
+              <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
+              <p class="team-list-text item-text">Frontend Developer</p>
+            </li>
+            <li class="team-list-item">
+              <img
+                class="team-list-image"
+                src="./images/section3/camila.jpg"
+                alt="Camila photo"
+                width="264"
+              />
+              <h3 class="team-subtitle section-subtitle">Camila Garcia</h3>
+              <p class="team-list-text item-text">Marketing</p>
+            </li>
+            <li class="team-list-item">
+              <img
+                class="team-list-image"
+                src="./images/section3/daniel.jpg"
+                alt="Daniel photo"
+                width="264"
+              />
+              <h3 class="team-subtitle section-subtitle">Daniel Wilson</h3>
+              <p class="team-list-text item-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo logo link" href="./index.html"
-        >Web<span class="footer-logo-span">Studio</span></a
-      >
-      <p class="footer-text item-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a class="footer-logo logo link" href="./index.html"
+          >Web<span class="footer-logo-span">Studio</span></a
+        >
+        <p class="footer-text item-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
