--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="nav">
           <a class="header-logo logo link" href="./index.html"
             >Web<span class="header-logo-span">Studio</span></a
@@ -38,203 +38,207 @@
             </li>
           </ul>
         </nav>
+        <address class="header-address">
+          <ul class="header-address-list list">
+            <li class="header-address-item">
+              <a
+                class="header-address-link header-link link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-address-item">
+              <a
+                class="header-address-link header-link link"
+                href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
-      <address class="header-address">
-        <ul class="header-address-list list">
-          <li class="header-address-item">
-            <a
-              class="header-address-link header-link link"
-              href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="header-address-item">
-            <a
-              class="header-address-link header-link link"
-              href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
     </header>
     <main>
       <section class="portfolio">
-        <h1 class="portfolio-title section-title">Portfolio</h1>
-        <ul class="portfolio-filter list">
-          <li class="portfolio-filter-item">
-            <button class="portfolio-filter-btn btn btn-light" type="button">
-              All
-            </button>
-          </li>
-          <li class="portfolio-filter-item">
-            <button class="portfolio-filter-btn btn btn-light" type="button">
-              Web Site
-            </button>
-          </li>
-          <li class="portfolio-filter-item">
-            <button class="portfolio-filter-btn btn btn-light" type="button">
-              App
-            </button>
-          </li>
-          <li class="portfolio-filter-item">
-            <button class="portfolio-filter-btn btn btn-light" type="button">
-              Design
-            </button>
-          </li>
-          <li class="portfolio-filter-item">
-            <button class="portfolio-filter-btn btn btn-light" type="button">
-              Marketing
-            </button>
-          </li>
-        </ul>
-        <ul class="portfolio-showcase list">
-          <li class="portfolio-showcase-item">
-            <a class="portfolio-showcase-link link">
-              <img
-                class="portfolio-showcase-image"
-                src="./images/portfolio/banking_app.jpg"
-                alt="Application pages"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-showcase-subtitle section-subtitle">
-                Banking App Interface Concept
-              </h2>
-              <p class="portfolio-showcase-text item-text">App</p>
-            </a>
-          </li>
-          <li class="portfolio-showcase-item">
-            <a class="portfolio-showcase-link link">
-              <img
-                class="portfolio-showcase-image"
-                src="./images/portfolio/payment.jpg"
-                alt="Payment with cellpone"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-showcase-subtitle section-subtitle">
-                Cashless Payment
-              </h2>
-              <p class="portfolio-showcase-text item-text">Marketing</p>
-            </a>
-          </li>
-          <li class="portfolio-showcase-item">
-            <a class="portfolio-showcase-link link">
-              <img
-                class="portfolio-showcase-image"
-                src="./images/portfolio/mediation_app.jpg"
-                alt="Laptop and cellpone with application"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-showcase-subtitle section-subtitle">
-                Meditation App
-              </h2>
-              <p class="portfolio-showcase-text item-text">App</p>
-            </a>
-          </li>
-          <li class="portfolio-showcase-item">
-            <a class="portfolio-showcase-link link">
-              <img
-                class="portfolio-showcase-image"
-                src="./images/portfolio/taxi_service.jpg"
-                alt="Car interior with driver"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-showcase-subtitle section-subtitle">
-                Taxi Service
-              </h2>
-              <p class="portfolio-showcase-text item-text">Marketing</p>
-            </a>
-          </li>
-          <li class="portfolio-showcase-item">
-            <a class="portfolio-showcase-link link">
-              <img
-                class="portfolio-showcase-image"
-                src="./images/portfolio/illustrations.jpg"
-                alt="Application screenshots"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-showcase-subtitle section-subtitle">
-                Screen Illustrations
-              </h2>
-              <p class="portfolio-showcase-text item-text">Design</p>
-            </a>
-          </li>
-          <li class="portfolio-showcase-item">
-            <a class="portfolio-showcase-link link">
-              <img
-                class="portfolio-showcase-image"
-                src="./images/portfolio/courses.jpg"
-                alt="Girl smiling with phone"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-showcase-subtitle section-subtitle">
-                Online Courses
-              </h2>
-              <p class="portfolio-showcase-text item-text">Marketing</p>
-            </a>
-          </li>
-          <li class="portfolio-showcase-item">
-            <a class="portfolio-showcase-link link">
-              <img
-                class="portfolio-showcase-image"
-                src="./images/portfolio/instagam.jpg"
-                alt="Instagram pages examples"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-showcase-subtitle section-subtitle">
-                Instagram Stories Concept
-              </h2>
-              <p class="portfolio-showcase-text item-text">Design</p>
-            </a>
-          </li>
-          <li class="portfolio-showcase-item">
-            <a class="portfolio-showcase-link link">
-              <img
-                class="portfolio-showcase-image"
-                src="./images/portfolio/organic_food.jpg"
-                alt="Person with fruits in the bag"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-showcase-subtitle section-subtitle">
-                Organic Food
-              </h2>
-              <p class="portfolio-showcase-text item-text">Web Site</p>
-            </a>
-          </li>
-          <li class="portfolio-showcase-item">
-            <a class="portfolio-showcase-link link">
-              <img
-                class="portfolio-showcase-image"
-                src="./images/portfolio/coffee.jpg"
-                alt="Coffee making process"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-showcase-subtitle section-subtitle">
-                Fresh Coffee
-              </h2>
-              <p class="portfolio-showcase-text item-text">Web Site</p>
-            </a>
-          </li>
-        </ul>
+        <div class="container portfolio-container">
+          <h1 class="portfolio-title section-title">Portfolio</h1>
+          <ul class="portfolio-filter list standard-list">
+            <li class="portfolio-filter-item">
+              <button class="portfolio-filter-btn btn btn-light" type="button">
+                All
+              </button>
+            </li>
+            <li class="portfolio-filter-item">
+              <button class="portfolio-filter-btn btn btn-light" type="button">
+                Web Site
+              </button>
+            </li>
+            <li class="portfolio-filter-item">
+              <button class="portfolio-filter-btn btn btn-light" type="button">
+                App
+              </button>
+            </li>
+            <li class="portfolio-filter-item">
+              <button class="portfolio-filter-btn btn btn-light" type="button">
+                Design
+              </button>
+            </li>
+            <li class="portfolio-filter-item">
+              <button class="portfolio-filter-btn btn btn-light" type="button">
+                Marketing
+              </button>
+            </li>
+          </ul>
+          <ul class="portfolio-showcase list">
+            <li class="portfolio-showcase-item">
+              <a class="portfolio-showcase-link link">
+                <img
+                  class="portfolio-showcase-image"
+                  src="./images/portfolio/banking_app.jpg"
+                  alt="Application pages"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-showcase-subtitle section-subtitle">
+                  Banking App Interface Concept
+                </h2>
+                <p class="portfolio-showcase-text item-text">App</p>
+              </a>
+            </li>
+            <li class="portfolio-showcase-item">
+              <a class="portfolio-showcase-link link">
+                <img
+                  class="portfolio-showcase-image"
+                  src="./images/portfolio/payment.jpg"
+                  alt="Payment with cellpone"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-showcase-subtitle section-subtitle">
+                  Cashless Payment
+                </h2>
+                <p class="portfolio-showcase-text item-text">Marketing</p>
+              </a>
+            </li>
+            <li class="portfolio-showcase-item">
+              <a class="portfolio-showcase-link link">
+                <img
+                  class="portfolio-showcase-image"
+                  src="./images/portfolio/mediation_app.jpg"
+                  alt="Laptop and cellpone with application"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-showcase-subtitle section-subtitle">
+                  Meditation App
+                </h2>
+                <p class="portfolio-showcase-text item-text">App</p>
+              </a>
+            </li>
+            <li class="portfolio-showcase-item">
+              <a class="portfolio-showcase-link link">
+                <img
+                  class="portfolio-showcase-image"
+                  src="./images/portfolio/taxi_service.jpg"
+                  alt="Car interior with driver"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-showcase-subtitle section-subtitle">
+                  Taxi Service
+                </h2>
+                <p class="portfolio-showcase-text item-text">Marketing</p>
+              </a>
+            </li>
+            <li class="portfolio-showcase-item">
+              <a class="portfolio-showcase-link link">
+                <img
+                  class="portfolio-showcase-image"
+                  src="./images/portfolio/illustrations.jpg"
+                  alt="Application screenshots"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-showcase-subtitle section-subtitle">
+                  Screen Illustrations
+                </h2>
+                <p class="portfolio-showcase-text item-text">Design</p>
+              </a>
+            </li>
+            <li class="portfolio-showcase-item">
+              <a class="portfolio-showcase-link link">
+                <img
+                  class="portfolio-showcase-image"
+                  src="./images/portfolio/courses.jpg"
+                  alt="Girl smiling with phone"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-showcase-subtitle section-subtitle">
+                  Online Courses
+                </h2>
+                <p class="portfolio-showcase-text item-text">Marketing</p>
+              </a>
+            </li>
+            <li class="portfolio-showcase-item">
+              <a class="portfolio-showcase-link link">
+                <img
+                  class="portfolio-showcase-image"
+                  src="./images/portfolio/instagam.jpg"
+                  alt="Instagram pages examples"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-showcase-subtitle section-subtitle">
+                  Instagram Stories Concept
+                </h2>
+                <p class="portfolio-showcase-text item-text">Design</p>
+              </a>
+            </li>
+            <li class="portfolio-showcase-item">
+              <a class="portfolio-showcase-link link">
+                <img
+                  class="portfolio-showcase-image"
+                  src="./images/portfolio/organic_food.jpg"
+                  alt="Person with fruits in the bag"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-showcase-subtitle section-subtitle">
+                  Organic Food
+                </h2>
+                <p class="portfolio-showcase-text item-text">Web Site</p>
+              </a>
+            </li>
+            <li class="portfolio-showcase-item">
+              <a class="portfolio-showcase-link link">
+                <img
+                  class="portfolio-showcase-image"
+                  src="./images/portfolio/coffee.jpg"
+                  alt="Coffee making process"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-showcase-subtitle section-subtitle">
+                  Fresh Coffee
+                </h2>
+                <p class="portfolio-showcase-text item-text">Web Site</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo logo link" href="./index.html"
-        >Web<span class="footer-logo-span">Studio</span></a
-      >
-      <p class="footer-text item-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a class="footer-logo logo link" href="./index.html"
+          >Web<span class="footer-logo-span">Studio</span></a
+        >
+        <p class="footer-text item-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
