--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         </div>
       </section>
       <section class="principles">
-        <div class="container standard-container principles-container">
-          <h2 class="principles-title">Our Principles</h2>
+        <div class="container principles-container">
+          <h2 class="visually-hidden">Our Principles</h2>
           <ul class="principles-list standard-list list">
             <li class="principles-list-item">
               <h3 class="principles-subtitle section-subtitle">Strategy</h3>
@@ -103,7 +103,7 @@
         </div>
       </section>
       <section class="services">
-        <div class="container standard-container services-container">
+        <div class="container services-container">
           <h2 class="services-title section-title">What are we doing</h2>
           <ul class="services-list standard-list list">
             <li class="services-list-item">
@@ -134,7 +134,7 @@
         </div>
       </section>
       <section class="team">
-        <div class="container team-container standard-container">
+        <div class="container team-container">
           <h2 class="team-title section-title">Our Team</h2>
           <ul class="team-list standard-list list">
             <li class="team-list-item">
