--- a/index.html
+++ b/index.html
@@ -144,8 +144,10 @@
                 alt="Mark photo"
                 width="264"
               />
-              <h3 class="team-subtitle section-subtitle">Mark Guerrero</h3>
-              <p class="team-list-text item-text">Product Designer</p>
+              <div class="team-item-content">
+                <h3 class="team-subtitle section-subtitle">Mark Guerrero</h3>
+                <p class="team-list-text item-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -154,8 +156,10 @@
                 alt="Tom photo"
                 width="264"
               />
-              <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
-              <p class="team-list-text item-text">Frontend Developer</p>
+              <div class="team-item-content">
+                <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
+                <p class="team-list-text item-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -164,8 +168,10 @@
                 alt="Camila photo"
                 width="264"
               />
-              <h3 class="team-subtitle section-subtitle">Camila Garcia</h3>
-              <p class="team-list-text item-text">Marketing</p>
+              <div class="team-item-content">
+                <h3 class="team-subtitle section-subtitle">Camila Garcia</h3>
+                <p class="team-list-text item-text">Marketing</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -174,8 +180,10 @@
                 alt="Daniel photo"
                 width="264"
               />
-              <h3 class="team-subtitle section-subtitle">Daniel Wilson</h3>
-              <p class="team-list-text item-text">UI Designer</p>
+              <div class="team-item-content">
+                <h3 class="team-subtitle section-subtitle">Daniel Wilson</h3>
+                <p class="team-list-text item-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
