fix test mistakes for portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,9 @@
     <main>
       <section class="portfolio">
         <div class="container portfolio-container">
-          <h1 class="portfolio-title section-title">Portfolio</h1>
+          <h1 class="portfolio-title section-title visually-hidden">
+            Portfolio
+          </h1>
           <ul class="portfolio-filter list standard-list">
             <li class="portfolio-filter-item">
               <button class="portfolio-filter-btn btn btn-light" type="button">
@@ -99,10 +101,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-showcase-subtitle section-subtitle">
-                  Banking App Interface Concept
-                </h2>
-                <p class="portfolio-showcase-text item-text">App</p>
+                <div class="showcase-item-content">
+                  <h2 class="portfolio-showcase-subtitle section-subtitle">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="portfolio-showcase-text item-text">App</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-showcase-item">
@@ -114,10 +118,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-showcase-subtitle section-subtitle">
-                  Cashless Payment
-                </h2>
-                <p class="portfolio-showcase-text item-text">Marketing</p>
+                <div class="showcase-item-content">
+                  <h2 class="portfolio-showcase-subtitle section-subtitle">
+                    Cashless Payment
+                  </h2>
+                  <p class="portfolio-showcase-text item-text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-showcase-item">
@@ -129,10 +135,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-showcase-subtitle section-subtitle">
-                  Meditation App
-                </h2>
-                <p class="portfolio-showcase-text item-text">App</p>
+                <div class="showcase-item-content">
+                  <h2 class="portfolio-showcase-subtitle section-subtitle">
+                    Meditation App
+                  </h2>
+                  <p class="portfolio-showcase-text item-text">App</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-showcase-item">
@@ -144,10 +152,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-showcase-subtitle section-subtitle">
-                  Taxi Service
-                </h2>
-                <p class="portfolio-showcase-text item-text">Marketing</p>
+                <div class="showcase-item-content">
+                  <h2 class="portfolio-showcase-subtitle section-subtitle">
+                    Taxi Service
+                  </h2>
+                  <p class="portfolio-showcase-text item-text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-showcase-item">
@@ -159,10 +169,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-showcase-subtitle section-subtitle">
-                  Screen Illustrations
-                </h2>
-                <p class="portfolio-showcase-text item-text">Design</p>
+                <div class="showcase-item-content">
+                  <h2 class="portfolio-showcase-subtitle section-subtitle">
+                    Screen Illustrations
+                  </h2>
+                  <p class="portfolio-showcase-text item-text">Design</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-showcase-item">
@@ -174,10 +186,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-showcase-subtitle section-subtitle">
-                  Online Courses
-                </h2>
-                <p class="portfolio-showcase-text item-text">Marketing</p>
+                <div class="showcase-item-content">
+                  <h2 class="portfolio-showcase-subtitle section-subtitle">
+                    Online Courses
+                  </h2>
+                  <p class="portfolio-showcase-text item-text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-showcase-item">
@@ -189,10 +203,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-showcase-subtitle section-subtitle">
-                  Instagram Stories Concept
-                </h2>
-                <p class="portfolio-showcase-text item-text">Design</p>
+                <div class="showcase-item-content">
+                  <h2 class="portfolio-showcase-subtitle section-subtitle">
+                    Instagram Stories Concept
+                  </h2>
+                  <p class="portfolio-showcase-text item-text">Design</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-showcase-item">
@@ -204,10 +220,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-showcase-subtitle section-subtitle">
-                  Organic Food
-                </h2>
-                <p class="portfolio-showcase-text item-text">Web Site</p>
+                <div class="showcase-item-content">
+                  <h2 class="portfolio-showcase-subtitle section-subtitle">
+                    Organic Food
+                  </h2>
+                  <p class="portfolio-showcase-text item-text">Web Site</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-showcase-item">
@@ -219,10 +237,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-showcase-subtitle section-subtitle">
-                  Fresh Coffee
-                </h2>
-                <p class="portfolio-showcase-text item-text">Web Site</p>
+                <div class="showcase-item-content">
+                  <h2 class="portfolio-showcase-subtitle section-subtitle">
+                    Fresh Coffee
+                  </h2>
+                  <p class="portfolio-showcase-text item-text">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
